fix image on mobile

--- a/src/components/Main/main.scss
+++ b/src/components/Main/main.scss
@@ -133,7 +133,8 @@
 }
 
 .damir-img {
-  border: 5px solid $white;
+  border: 3px solid $white;
+  outline: 3px solid $color2;
   border-radius: 50%;
   min-height: 200px;
   margin: 0 24px 0 0;
@@ -142,7 +143,6 @@
   @media screen and (max-width: $mobile) {
     margin-right: 0;
     margin-bottom: 48px;
-    min-height: 150px;
-    min-width: 150px;
+    max-width: 250px;
   }
 }
